--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,6 +20,12 @@
 
 
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="git rm -r --cached .idea" />
+
+    <TextView
         android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,7 +34,7 @@
         android:text="LOGIN"
         android:textColor="#ffff"
         android:textSize="28sp"
-        android:textStyle="bold"
+        android:textStyle="italic|bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,10 +46,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:fontFamily="sans-serif-smallcaps"
-        android:letterSpacing="0.5"
+        android:letterSpacing="1"
         android:text="NOTELY"
         android:textColor="#ffff"
-        android:textSize="28sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -110,8 +116,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Don’t have an account? Sign up"
-        android:textColor="#80CFFF"
+        android:textColor="#ffff"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/btnLogin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
