--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,23 +6,21 @@
     <color name="ffffff">#000000</color>
     <color name="ffff">#8A8A8A</color>
 
-    <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryVariant">#3700B3</color>
     <color name="colorSecondary">#03DAC6</color>
-
-    <!-- Background / Surface -->
-    <color name="colorBackground">#FFFFFF</color>
-    <color name="colorSurface">#F9F9F9</color>
-
-    <!-- Text -->
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="colorOnSecondary">#000000</color>
     <color name="colorOnBackground">#000000</color>
-    <color name="colorOnSurface">#333333</color>
 
-    <color name="noteCard">#FFFDF5</color> <!-- warm off-white -->
+    <color name="noteCard">#FFFDF5</color>
     <color name="noteTitle">#202124</color>
     <color name="noteContent">#5F6368</color>
     <color name="noteTime">#9AA0A6</color>
     <color name="green">#83FF00</color>
+
+
+    <color name="colorBackground">#F5F5F7</color>
+    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorPrimary">#6C5CE7</color>  -->
+    <color name="colorOnSurface">#1C1C1E</color>
 </resources>
